<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/m47dp"
        android:layout_height="@dimen/m65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/m60dp"
        android:src="@drawable/main_location_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/m17dp"
        android:text="@string/chelian"
        android:textColor="#ffffff"
        android:textSize="@dimen/m20sp" />

    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/m20dp"
        android:layout_marginRight="@dimen/m20dp"
        android:layout_marginTop="@dimen/m50dp"
        android:drawableLeft="@drawable/main_user"
        android:drawablePadding="@dimen/m10dp"
        android:hint="@string/login_name"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/m16sp" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/m20dp"
        android:layout_marginRight="@dimen/m20dp"
        android:layout_marginTop="@dimen/m20dp"
        android:drawableLeft="@drawable/main_password"
        android:drawablePadding="@dimen/m10dp"
        android:hint="@string/loginn_password"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/m16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/m5dp"
        android:layout_marginRight="@dimen/m5dp"
        android:layout_marginTop="@dimen/m20dp"
        android:background="@drawable/app_button_green_selector"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="@dimen/m16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_now_regist"
            style="@style/app_main_text_style"
            android:text="@string/now_register" />

        <TextView
            android:id="@+id/tv_ip_regist"
            style="@style/app_main_text_style"
            android:layout_marginLeft="@dimen/m15dp"
            android:text="@string/ip_regist" />

        <TextView
            android:id="@+id/tv_forget_password"
            style="@style/app_main_text_style"
            android:layout_marginLeft="@dimen/m16dp"
            android:text="@string/forget_password" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_guist_entry"
            style="@style/app_main_text_style"
            android:layout_marginRight="@dimen/m10dp"
            android:text="游客登录" />

    </LinearLayout>

</LinearLayout>


