<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/m47dp"
        android:layout_height="@dimen/m65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/m60dp"
        android:src="@drawable/main_location_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/m17dp"
        android:text="@string/chelian"
        android:textColor="@color/font_white"
        android:textSize="@dimen/m21sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/m50dp"
        android:layout_marginTop="@dimen/m50dp">

        <EditText
            android:id="@+id/et_forget_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/m10dp"
            android:layout_marginRight="@dimen/m10dp"
            android:hint="@string/login_phone"
            android:textColor="@color/font_white"
            android:textColorHint="#ffffff"
            android:textSize="@dimen/m16sp" />

        <Button
            android:id="@+id/btn_forget_send_vcode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m45dp"
            android:layout_alignBottom="@id/et_forget_login_name"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/m15dp"
            android:layout_marginRight="@dimen/m23dp"
            android:background="@drawable/main_get_vcode_button_selector"
            android:gravity="center"
            android:paddingLeft="@dimen/m10dp"
            android:paddingRight="@dimen/m10dp"
            android:text="获取验证码"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/m16sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/et_forget_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/m10dp"
        android:layout_marginRight="@dimen/m10dp"
        android:layout_marginTop="@dimen/m20dp"
        android:hint="@string/login_vcode"
        android:textColor="@color/font_white"
        android:textColorHint="#ffffff"
        android:textSize="@dimen/m16sp" />

    <Button
        android:id="@+id/btn_forget_login"
        style="@style/app_button_green_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m45dp"
        android:layout_marginLeft="@dimen/m10dp"
        android:layout_marginRight="@dimen/m10dp"
        android:layout_marginTop="@dimen/m40dp"
        android:text="@string/login" />


    <TextView
        android:id="@+id/tv_forget_now_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/m15dp"
        android:layout_marginTop="@dimen/m15dp"
        android:text="@string/now_register"
        android:textColor="@color/font_white"
        android:textSize="@dimen/m14sp" />


</LinearLayout>
